# business-in-code-lab

./: README
js/: package-lock.json  package.json
js/src/: userService.js
js/src/block-1-2/: exercise-refactor.test.js  exercise.test.js  fibonacci.js
js/src/block-2-1/: docker-compose.yml  exercice-impure.test.js  exercise-pure.test.js  exercise.test.js  userService.js
js/src/block-2-2/: exercice.test.js
js/src/block-2-2/__snapshots__/: exercice.test.js.snap
python/: pyproject.toml
python/src/block-1-1/: exercise-1-1_test.py
python/src/block-1-2/: exercise-1-2_test.py
python/src/block-2-1/: exercise-2-1_test.py
python/src/block-2-2/: exercise-2-2_test.py
