[tool.poetry]
name = "business-in-code"
version = "0.1.0"
description = ""
authors = ["\"\""]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
pytest = "^5.3.5"
hypothesis = "^5.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
